--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,10 @@
 *.tgz filter=lfs diff=lfs merge=lfs -text
 *.tar.gz filter=lfs diff=lfs merge=lfs -text
-*.txt.gz filter=lfs diff=lfs merge=lfs -text
-*.tsv.gz filter=lfs diff=lfs merge=lfs -text
-*.csv.gz filter=lfs diff=lfs merge=lfs -text
-*.prn.gz filter=lfs diff=lfs merge=lfs -text
+*eqtl.txt.gz filter=lfs diff=lfs merge=lfs -text
+*eqtl.tsv.gz filter=lfs diff=lfs merge=lfs -text
+*eqtl.csv.gz filter=lfs diff=lfs merge=lfs -text
+*eqtl.prn.gz filter=lfs diff=lfs merge=lfs -text
+*gwas.txt.gz filter=lfs diff=lfs merge=lfs -text
+*gwas.tsv.gz filter=lfs diff=lfs merge=lfs -text
+*gwas.csv.gz filter=lfs diff=lfs merge=lfs -text
+*gwas.prn.gz filter=lfs diff=lfs merge=lfs -text
