--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
-language: python
+language: bash
 sudo: false
 
 warnings_are_errors: false
-
-python:
-  - "3.6"
-  - "3.7-dev"
 
 branches:
   only:
     - master
     - integrator
+
+install:
+  .travis/install.sh
